server-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - name: http
      protocol: TCP
      port: 5001
      targetPort: 5000
