ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules: 
    - host: shopping.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: server-cluster-ip-service 
              port:
                number: 5001
